--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,104 @@
   text-align: center;
 }
 
+#formHeader {
+    height:20px;
+    width:auto;
+}
+
 .App-intro {
   font-size: large;
-    text-align: center;
+  background-color: white;
+  width:55%;
+  position: relative;
+  left: 22%;
+  height:50px;
+  background-color: #00d8ff;
+  display: flex;
+  justify-content:center;
+   align-items:center;
+  flex-direction:column;
+}
+
+.formelements select, label, .boxes {
+  display: block;
+  margin: 10px 0px 0px 5px;
+}
+
+.boxes{
+  border: none;
+  background-color: rgb(250,250,250);
+  border-bottom: 1px solid #8da6aa;
+  width:250px;
+  height:25px;
+  outline: 0;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.boxes:focus {
+  border-bottom: 2px solid #00d8ff;
+}
+
+#submitButton{
+  margin: 5px 0px 5px 5px;
+  width: 250px;
+  height:35px;
+  background-color: #00d8ff;
+  border-radius: 5px;
+  position: relative;
+  left:280px;
+  top:50px;
+  font-size: 14px;
+  outline:0px;
+}
+
+form {
+  position: relative;
+  left: 22%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width:55%;
+  overflow: hidden;
+  /*  overflow prevents adjacent margins collapsing and causing weird behaviour*/
+}
+
+label {
+  display: block;
+  padding-left: 15px;
+  text-indent: -15px;
+}
+
+.item tr{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+table{
+  width:100%;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+
+.checkList{
+  float: right;
+  position: relative;
+  bottom:150px;
+  right:50px;
+}
+
+.studentTable {
+  position: relative;
+  top:20px;
+  left: 22%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width:55%;
+  overflow: hidden;
+}
+
+Body {
+  background-color: rgb(250,250,250);
 }
